@@ -1,7 +1,7 @@
 dnl -*- sh -*-
 dnl the "configure" script is made from this by running GNU "autoconf"
 dnl
-dnl "$Id: configure.in,v 1.33.2.31.2.60 2002/04/16 15:49:06 easysw Exp $"
+dnl "$Id: configure.in,v 1.33.2.31.2.61 2002/04/16 17:11:11 easysw Exp $"
 dnl
 dnl Configuration script for the Fast Light Tool Kit (FLTK).
 dnl
@@ -35,7 +35,7 @@ dnl FLTK library versions...
 FL_MAJOR_VERSION=1
 FL_MINOR_VERSION=1
 FL_PATCH_VERSION=0
-FL_RELEASE_VERSION=b13
+FL_RELEASE_VERSION=rc1
 FL_API_VERSION=${FL_MAJOR_VERSION}.${FL_MINOR_VERSION}
 
 AC_SUBST(FL_MAJOR_VERSION)
@@ -59,9 +59,10 @@ OPTIM="${OPTIM:=}"
 
 AC_SUBST(OPTIM)
 
-dnl Handle Cygwin option *first*, before all other tests.
+dnl OS-specific pre-tests...
 case $uname in
     CYGWIN*)
+        # Handle Cygwin option *first*, before all other tests.
 	AC_ARG_ENABLE(cygwin, [  --enable-cygwin         use the CygWin libraries [default=no]])
 	if test x$enable_cygwin != xyes; then
 	    CFLAGS="$CFLAGS -mno-cygwin"
@@ -101,7 +102,7 @@ AC_ARG_ENABLE(shared, [  --enable-shared         turn on shared libraries [defau
 if test x$enable_shared = xyes; then
     PICFLAG=1
     case $uname in
-	*BSD* | Darwin*)
+	Darwin*)
             DSONAME="libfltk.$FL_API_VERSION.dylib"
             FLDSONAME="libfltk_forms.$FL_API_VERSION.dylib"
             GLDSONAME="libfltk_gl.$FL_API_VERSION.dylib"
@@ -138,7 +139,7 @@ if test x$enable_shared = xyes; then
 		    DSOLINK="-Wl,-rpath,$libdir"
             fi
 	    ;;
-	Linux*)
+	Linux* | *BSD*)
             DSONAME="libfltk.so.$FL_API_VERSION"
             FLDSONAME="libfltk_forms.so.$FL_API_VERSION"
             GLDSONAME="libfltk_gl.so.$FL_API_VERSION"
@@ -348,7 +349,7 @@ case $uname in
 	    GLDEMOS=""
 	fi
 
-	if test $have_pthread = yes; then
+	if test x$have_pthread = xyes; then
 	    AC_DEFINE(HAVE_PTHREAD)
 	    THREADS="threads.exe"
 	fi
@@ -356,11 +357,12 @@ case $uname in
 	# Don't make symlinks since Windows is not case sensitive.
 	HLINKS="#"
 	;;
+
     Darwin*)
         # MacOS X uses Carbon for graphics...
         LIBS="$LIBS -framework Carbon -framework ApplicationServices"
 
-	if test $have_pthread = yes; then
+	if test x$have_pthread = xyes; then
 	    AC_DEFINE(HAVE_PTHREAD)
 	    THREADS="threads"
 	fi
@@ -382,9 +384,10 @@ case $uname in
 	# Add a postbuild step after linking applications
 	POSTBUILD="/Developer/Tools/Rez -t APPL -o"
 	;;
+
     *)
 	# All others are UNIX/X11...
-	if test $have_pthread = yes; then
+	if test x$have_pthread = xyes; then
 	    AC_DEFINE(HAVE_PTHREAD)
 	    THREADS="threads"
 	fi
@@ -717,5 +720,5 @@ dnl Make sure the fltk-config script is executable...
 chmod +x fltk-config
 
 dnl
-dnl End of "$Id: configure.in,v 1.33.2.31.2.60 2002/04/16 15:49:06 easysw Exp $".
+dnl End of "$Id: configure.in,v 1.33.2.31.2.61 2002/04/16 17:11:11 easysw Exp $".
 dnl
